-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.0.0-beta1
-
None
The default working directory in the runconfiguration is shown as plasceholdertext. Although the path is correct, the text color is error red (but half transparent, since it is the place holder text)
For Gerrit Dashboard: QTCREATORBUG-15644 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
153375,3 | WorkDirectoryAspect: Small improvements | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |