WorkDirectoryAspect: Small improvements

* Do only enable the reset button when there is something to reset
* Do not print the default directory in red

Task-number: QTCREATORBUG-15644
Change-Id: I05cdd02751dce2c4faeb97358d654251dd9dbfa4
Reviewed-by: Alessandro Portale <alessandro.portale@theqtcompany.com>
Reviewed-by: hjk <hjk@theqtcompany.com>